--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,500,500i,600,600i,700,700i&amp;subset=latin-ext">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
 
     <script src="{{ url_for('static', filename='js/require.min.js')}}" ></script>
     <script>
@@ -37,6 +38,10 @@
     <!-- Input Mask Plugin -->
     <script src="{{ url_for('static', filename='plugins/input-mask/plugin.js')}}"></script>
 
+    <script src="{{ url_for('static', filename='plugins/datatables/plugin.js')}}"></script>
+
+    <script src="{{ url_for('static', filename='js/vendors/jquery-3.2.1.min.js')}}"></script>
+
     {% block styles %} {% endblock %}    
   </head>
   <body class="">
@@ -46,7 +51,7 @@
           <div class="container">
             <div class="d-flex">
               <a class="header-brand" href="./index.html">
-                <img src="{{ url_for('static', filename='images/tabler.svg')}}" class="header-brand-img" alt="tabler logo">
+                <img src="{{ url_for('static', filename='images/400xcandles.png')}}" class="header-brand-img" alt="tabler logo"> Crypto Trading Journal
               </a>
               <div class="d-flex order-lg-2 ml-auto">
 
@@ -76,13 +81,13 @@
               <div class="col-lg order-lg-first">
                 <ul class="nav nav-tabs border-0 flex-column flex-lg-row">
                   <li class="nav-item">
-                    <a href="./index.html" class="nav-link active"><i class="fe fe-box"></i> Dashboard</a>
+                    <a href="/dashboard" {%- if request.path == "/dashboard" %} class="active nav-link "{% else %} class="nav-link" {% endif %}><i class="fe fe-box"></i> Dashboard</a>
                   </li>
                   <li class="nav-item">
-                    <a href="./docs/index.html" class="nav-link"><i class="fe fe-bar-chart-2"></i> Trades</a>
+                    <a href="/trades" {%- if request.path == "/trades" %} class="active nav-link "{% else %} class="nav-link" {% endif %}><i class="fe fe-bar-chart-2"></i> Trades</a>
                   </li>
                   <li class="nav-item">
-                    <a href="./docs/index.html" class="nav-link"><i class="fe fe-activity"></i> Analytics</a>
+                    <a href="/analytics"{%- if request.path == "/analytics" %} class="active nav-link "{% else %} class="nav-link" {% endif %}><i class="fe fe-activity"></i> Analytics</a>
                   </li>
                 </ul>
               </div>
@@ -90,7 +95,9 @@
           </div>
         </div>
         <div class="my-3 my-md-5">
+          <div class="container">
             {% block content %} {% endblock %}
+          </div>
         </div>
       </div>
 
