Added add trade modal

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,8 @@
 
     <script src="{{ url_for('static', filename='js/vendors/jquery-3.2.1.min.js')}}"></script>
 
-    {% block styles %} {% endblock %}    
+
+    {% block style %} {% endblock %}    
   </head>
   <body class="">
     <div class="page">
