--- a/templates/private/analytics.html
+++ b/templates/private/analytics.html
@@ -2,8 +2,28 @@
 
 {% block title %} CTJ - Analytics {% endblock %}
 
-{% block content %}
+{% block style %}
+<style>
+.card-header-tabs {
+  line-height: inherit;
+}
+</style>
+{% endblock %}
 
+{% block content %}
+<div class="card-header">
+<ul class="nav nav-tabs card-header-tabs">
+<li class="nav-item">
+<a class="nav-link active" href="#">Active</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="#">Link</a>
+</li>
+<li class="nav-item">
+<a class="nav-link disabled" href="#">Disabled</a>
+</li>
+</ul>
+</div>
 {% endblock %}
 
 {% block scripts %}
